# tree-sitter-naft

./: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: items.txt
src/: grammar.json  node-types.json  parser.c
